--- a/同步传.md
+++ b/同步传.md
@@ -1,21 +1,23 @@
-# 同步传
-
-
+# 同步传 local
 
 一个「局域网PC与手机互传文件，且不想借助微信/QQ等骚扰软件」的软件
 
-go gui webSocket
+必须要有谷歌浏览器
 
 编译
 
 ``` go
-go build -ldflags -H=windowsgui -o "同步传.exe"
+go build -ldflags -H=windowsgui -o "local.exe"
 ```
 
 
 
+<img src="github.com/young-sudo/goDesktop\frontend\src\images\synk.png" alt="同步传" style="zoom: 50%;" />
 
+![img](github.com/young-sudo/goDesktopgoDesktop\frontend\local.png)
 
+`local_test.exe`可以直接在windows上运行
 
+`localsetup.exe`是Windows安装程序
 
-<img src="server\frontend\src\images\synk.png" alt="同步传" style="zoom: 50%;" />
+这是某位大佬的教学项目,并不是我自己写的
